# linguard

./: .coveragerc  .gitattributes  .gitignore  Dockerfile  Pipfile  README.md  app.py  build.sh  changelog.md  config.sample.yaml  docker-compose.yml  gen_version_file.sh  pyproject.toml  release-notes.md  requirements.txt  system_utils.py  uwgsi.sample.yaml  version.yaml
.github/workflows/: dev-git-install.yaml  dev-install.yaml  dev.yaml  git-install.yaml  install.yaml  latest-deploy.yaml  latest-test.yaml  main-deploy.yaml  main-test.yaml  main.yaml  stable-deploy.yaml  stable-test.yaml
Linguard/: Linguard.sln
Linguard/Cli/: Cli.csproj  CliStartup.cs  DefaultYamlConfigurationSerializer.cs  NLog.config  Program.cs
Linguard/Cli.Test/: AddClientCommandShould.cs  AddInterfaceCommandShould.cs  AddInterfaceCommandShouldNot.cs  ListClientsCommandShould.cs  ListInterfacesCommandShould.cs  ShowInterfaceCommandShould.cs  Utils.cs
Linguard/Core/: Core.csproj  (+2 more)
config/: linguard.sample.yaml  uwgsi.sample.yaml  uwsgi.sample.yaml
core/: app_manager.py  config_manager.py  cron_manager.py  crypto_utils.py  exceptions.py  models.py  server.py  signal_manager.py  traffic_storage.py  utils.py  wireguard.py  wireguard_manager.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
linguard/: Linguard.sln  __main__.py  __version__.py
scripts/: install.sh  log.sh  run.sh
systemd/: linguard.service
tests/: test_password_reset.py  test_profile.py  test_server.py  utils.py
web/: app.py  controller.py  forms.py  models.py  router.py  server.py  utils.py  validators.py
(+501 files in other folders)
