[tool.poetry]
name = "linguard"
version = "0.2.0"
description = "Wireguard management made simple"
authors = ["Jose <joseantoniomazon@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/joseantmazonsb/linguard"
repository = "https://github.com/joseantmazonsb/linguard"
keywords = ["wireguard", "gui", "webserver", "flask", "vpn"]

[tool.poetry.dependencies]
python = "^3.7"
coolname = "^1.1.0"
cryptography = "^3.4.8"
Faker = "^8.12.1"
Flask = "^2.0.1"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.15.1"
PyYAML = "^5.4.1"
schedule = "^1.1.0"
WTForms = "^2.3.3"
yamlable = "^1.0.4"
Flask-QRcode = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[tool.coverage.run]
omit = ["*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
